--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,11 @@
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
 gles2_architectures := armel armhf
 
+ifneq (,$(filter $(DEB_HOST_ARCH),s390x))
+  DEB_BUILD_OPTIONS := $(DEB_BUILD_OPTIONS) noopt
+  export DEB_BUILD_OPTIONS
+endif
+
 %:
 	dh $@ --with quilt,autoreconf --parallel
 
