Commit the manual direct uploads from the archive.
(bzr r877)

--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
                libboost-system-dev,
                google-mock (>= 1.6.0+svn437),
                libcairo2-dev (>= 1.9.14),
-               libpng12-dev (>= 1.2.44),
+               libpng-dev,
                libglew-dev [!armel !armhf],
                libglewmx-dev [!armel !armhf],
                libxxf86vm-dev,
@@ -76,7 +76,7 @@ Depends: libnux-4.0-0 (= ${binary:Version}),
          libgdk-pixbuf2.0-dev,
          libboost-dev,
          libcairo2-dev (>= 1.9.14),
-         libpng12-dev (>= 1.2.44),
+         libpng-dev,
          libglew-dev [!armel !armhf],
          libglewmx-dev [!armel !armhf],
          libgl1-mesa-dev [!armel !armhf],
