--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
                libboost-filesystem-dev,
                libboost-system-dev,
                google-mock (>= 1.6.0+svn437),
+               libgtest-dev,
                libcairo2-dev (>= 1.9.14),
                libpng-dev,
                libglewmx-dev [!armel !armhf],
